--- a/gradebook.html
+++ b/gradebook.html
@@ -12,7 +12,7 @@
 
 <body>
     <h2 id="header">This is a gradebook</h2>
-    <table id="gradebook">
+    <table id="grade_table">
         <tr>
             <th>Student</th>
             <th>Assignment 1</th>
